Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- DirectoryEntryVocabulary
- New "User Identifier Widget" that use the isMemberIdAllowed() for
  validation.
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Better internal API for no ACL checks on datamodel.